linked all user pages on the feed page

--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -156,3 +156,12 @@
 .indiv-contact:hover {
     background-color: rgb(216, 216, 216);
 }
+
+
+.link-to-friend {
+    text-decoration: none;
+}
+
+.link-to-friend:visited {
+    color: black;
+}
