--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -165,3 +165,13 @@
 .link-to-friend:visited {
     color: black;
 }
+
+.link-to-friend-post {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+}
+
+.link-to-friend-post:visited {
+    color: black;
+}
