--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -86,15 +86,12 @@
 }
 
 .indiv-story-container:hover {
-    transform: scale(1.05)
+    transform: scale(1.03)
 }
 
-/* .grow { transition: all .2s ease-in-out; }
-.grow:hover { transform: scale(1.1); } */
-
-.story-container:first-child {
+/* .story-container:first-child {
     margin-left: 0rem!important;
-}
+} */
 
 .story-images {
     border-radius: 8px;
