--- a/react-app/src/components/Search/search.css
+++ b/react-app/src/components/Search/search.css
@@ -27,7 +27,6 @@
     border-radius: 500px;
     padding-left: .7rem;
     margin-right: .5rem;
-    font-size: 1rem;
     outline: none;
 }
 
@@ -65,6 +64,20 @@
     width: 2.5rem;
     height: 2.5rem;
     margin-right: .5rem;
+}
+
+.search-result-names {
+    display: flex;
+    flex-direction: column;
+}
+
+.result-names {
+    font-size: .9rem;
+    font-weight: bold;
+}
+
+.result-alias {
+    font-size: .8rem;
 }
 
 .search-header {
