--- a/react-app/src/components/Profile/profile.css
+++ b/react-app/src/components/Profile/profile.css
@@ -1,4 +1,5 @@
 .profile-container {
+    margin-top: 2rem;
     border-bottom: 2px rgb(214, 214, 214) solid;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
