--- a/react-app/src/components/auth/loginform.css
+++ b/react-app/src/components/auth/loginform.css
@@ -74,9 +74,10 @@
 .logoutBtn {
     color: rgb(105, 105, 105);
     font-weight:bolder;
-    font-size: .9rem;
+    font-size: 1rem;
     padding: .7rem;
     margin-right: 1.5rem;
+    margin-left: .1rem;
 }
 
 .logoutBtn:hover {
