--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -5,7 +5,7 @@
     background-color: white;
     position: fixed;
     z-index: 10;
-    height: 5vh;
+    height: 4rem;
     top: 0;
     left: 0;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
@@ -26,7 +26,7 @@
 }
 
 .fontAwesomeness {
-    font-size: 1.6vw;
+    font-size: 1.8rem;
     color: grey;
     padding-left: 1.2rem;
     padding-right: 1.2rem;
@@ -35,9 +35,9 @@
 }
 
 .fontAwesomeness1 {
-    font-size: 1.6vw;
+    font-size: 2.5rem;
     color: #2282ff;
-    padding-left: 1.2rem;
+    padding-left: .5rem;
     padding-right: 1.2rem;
     padding-bottom: .3rem;
     padding-top: .3rem;
@@ -66,14 +66,14 @@
 .navbar-profile-pic {
     border-radius: 50%;
     object-fit: cover;
-    width: 2rem;
-    height: 2rem;
-    margin-right: .3rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: .5rem;
 }
 
 .firstName-profile-nav {
     text-decoration: none;
-    padding-left: 1rem;
+    padding-left: .3rem;
     padding-right: 1rem;
     padding-bottom: .3rem;
     padding-top: .3rem;
@@ -82,7 +82,7 @@
 .name-color {
     color: rgb(105, 105, 105);
     font-weight:bolder;
-    font-size: .9rem;
+    font-size: 1rem;
 }
 
 .firstName-profile-nav:hover {
