photos page done

--- a/react-app/src/components/Friends/friend.css
+++ b/react-app/src/components/Friends/friend.css
@@ -7,7 +7,12 @@
     font-weight: bold;
     padding: .7rem;
     margin-top: 1rem;
+    margin-bottom: 1.3rem;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+}
+
+.friend-text {
+    margin-bottom: .2rem;
 }
 
 .friend-box {
