profile nav css in progress

--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -183,7 +183,7 @@
 .friends-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.3rem;
+    margin-bottom: 1.3rem!important;
 }
 
 .nine-friends {
