--- a/react-app/src/components/Profile/profile.css
+++ b/react-app/src/components/Profile/profile.css
@@ -62,6 +62,17 @@
     color: rgb(151, 151, 151);
 }
 
+/* .profile-nav {
+    display: flex;
+    justify-content: space-around;
+    width: 80vw;
+    padding-bottom: 1vh;
+    padding-left: 10vw;
+    background-color: white;
+    color: #1877F2;
+    border-bottom: 3px solid #1877F2;
+} */
+
 .profile-text:hover {
     /* color: #2282ff; */
     cursor: pointer;
