about page done

--- a/react-app/src/components/About/about.css
+++ b/react-app/src/components/About/about.css
@@ -13,3 +13,12 @@
 .about-text {
     margin-bottom: .5rem;
 }
+
+.about-spacing {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+}
+
+.spacing-button {
+    margin-top: .5rem;
+}
