--- a/react-app/src/components/EditIntroModal/intro.css
+++ b/react-app/src/components/EditIntroModal/intro.css
@@ -4,6 +4,19 @@
     padding: 1rem;
 }
 
+.edit-intro-title {
+    font-weight: bold;
+    font-size: 1.1rem;
+    text-align: center;
+    margin-bottom: -.7rem;
+}
+
+.edit-field-name {
+    font-weight: bold;
+    font-size: .9rem;
+    margin-bottom: .1rem;
+}
+
 .save-or-cancel {
     display: flex;
     width: 100%!important;
