--- a/react-app/src/components/navbar.css
+++ b/react-app/src/components/navbar.css
@@ -74,7 +74,7 @@
 .firstName-profile-nav {
     text-decoration: none;
     padding-left: .3rem;
-    padding-right: 1rem;
+    padding-right: .5rem;
     padding-bottom: .3rem;
     padding-top: .3rem;
 }
