--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 50000;
 }
 
 #modal-background {
@@ -16,7 +17,6 @@
   left: 0;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.8);
-
 }
 
 #modal-content {
@@ -25,6 +25,7 @@
   /* display: flex; */
   min-width: 450px;
   width: 23vw;
+  /* width: auto; */
   border-radius: 12px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
