scroll bars styled

--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -40,6 +40,20 @@
     overflow-x: hidden;
 }
 
+
+.feed-side-column::-webkit-scrollbar,
+.feed-side-column2::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: #f0f2f5;
+}
+
+.feed-side-column::-webkit-scrollbar-thumb,
+.feed-side-column2::-webkit-scrollbar-thumb {
+    background: rgb(202, 202, 202);
+    border-radius: 500px;
+}
+
 .feed-main-column {
     width: 34%;
     display: flex;
