--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -165,6 +165,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
+    margin-top: -.5rem;
 }
 
 .image-index-0 {
@@ -194,13 +195,14 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    margin-top: -.4rem;
 }
 
 .indiv-portrait {
     display: flex;
     flex-direction: column;
     /* margin-top: 1rem; */
-    margin-left: .2rem;
+    margin-left: .4rem;
 }
 
 .friends-portrait {
