--- a/react-app/src/components/auth/SignUpModal/signup.css
+++ b/react-app/src/components/auth/SignUpModal/signup.css
@@ -1,5 +1,10 @@
 .signup-form {
     padding: 1rem;
+    /* background-color: white;
+    border-radius: 12px;
+    min-width: 450px;
+    width: 23vw; */
+    /* border: 1px red solid; */
 }
 
 .signup-text {
