--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -21,11 +21,10 @@
 
 #modal-content {
   position: absolute;
+  /* background-color: transparent; */
   background-color: white;
-  /* display: flex; */
+  border-radius: 12px;
   min-width: 450px;
   width: 23vw;
-  /* width: auto; */
-  border-radius: 12px;
   box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
