--- a/react-app/src/components/EditIntroModal/intro.css
+++ b/react-app/src/components/EditIntroModal/intro.css
@@ -1,7 +1,12 @@
 .edit-intro-form {
     display: flex;
     flex-direction: column;
+    border-radius: 12px;
     padding: 1rem;
+    background-color: white;
+    min-width: 450px;
+    width: 23vw;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
 
 .edit-intro-title {
