--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -21,10 +21,10 @@
 
 #modal-content {
   position: absolute;
-  /* background-color: transparent; */
-  background-color: white;
-  border-radius: 12px;
-  min-width: 450px;
-  width: 23vw;
-  box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+  background-color: transparent;
+  /* background-color: white; */
+  /* border-radius: 12px; */
+  /* min-width: 450px; */
+  /* width: 23vw; */
+  /* box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%); */
 }
