--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -502,6 +502,16 @@
     color: rgb(131, 131, 131)
 }
 
+.comment1-button {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    border-radius: 12px;
+    font-weight: bold;
+    color: #1877F2
+}
+
 .unlike-post-button {
     padding-top: .5rem;
     padding-bottom: .5rem;
@@ -514,7 +524,8 @@
 
 .like-post-button:hover,
 .unlike-post-button:hover,
-.comment-button:hover {
+.comment-button:hover,
+.comment1-button:hover {
     background-color: rgb(238, 238, 238);
 }
 
