--- a/react-app/src/components/PhotosModal/photosmodal.css
+++ b/react-app/src/components/PhotosModal/photosmodal.css
@@ -13,6 +13,15 @@
     display: none;
 }
 
+.no-photos-in-modal {
+    margin-top: -.3rem
+}
+
+.photos-counter {
+    font-weight: normal;
+    
+}
+
 .p-container {
     display: flex;
     flex-wrap:wrap;
