--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -78,6 +78,23 @@
     background-color: rgb(216, 216, 216);
 }
 
+.arrow-options {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-right: 5rem; /*extend border shading*/
+    margin-bottom: .5rem;
+    padding-left: .5rem;
+    padding-top: 1.1rem;
+    padding-bottom: 1.1rem;
+    border-radius: 8px;
+}
+
+.arrow-options:hover {
+    background-color: rgb(216, 216, 216);
+}
+
 .feed-left-option-label {
     font-weight: bold;
     font-size: .9rem;
