--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -41,7 +41,7 @@
     margin-top: 1rem;
     background-color: white;
     position: relative;
-    z-index: 0;
+    /* z-index: 0; */
 }
 
 .intro-container > span,
