--- a/react-app/src/components/Emojis/emoji.css
+++ b/react-app/src/components/Emojis/emoji.css
@@ -19,6 +19,13 @@
     right: -1rem;
 }
 
+.emoji-container4 {
+    position: absolute;
+    z-index: 3;
+    top: 2.8rem;
+    right: -1rem;
+}
+
 .emoji-categories {
     display: none!important;
 }
@@ -41,6 +48,13 @@
     cursor: pointer;
 }
 
-.position-absolute {
+.addEmoji-to-edit-comment {
+    color: grey;
+    position: absolute;
+    right: 16%;
+    cursor: pointer;
+}
+
+.position-relative {
     position: relative;
 }
