--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -430,7 +430,7 @@
 }
 
 .comment-field {
-    width: 91%;
+    width: 98%;
     border: 10px solid rgb(131, 131, 131);
     background-color: rgb(238, 238, 238);
     border: hidden;
@@ -438,8 +438,8 @@
     padding-bottom: .6rem;
     border-radius: 500px;
     padding-left: 1rem;
-    padding-right: 1rem;
-    /* margin-right: 1rem; */
+    padding-right: 2.7rem;
+    box-sizing: border-box;
     font-size: 1rem;
 }
 
@@ -692,7 +692,8 @@
     background-color: white;
     border: 1px solid rgb(238, 238, 238);;
     border-radius: 500px;
-    margin-left: 91%;
+    /* margin-left: 91%; */
+    right: 0;
     margin-top: -1%;
 
     /* margin-bottom: 1rem!important; */
