--- a/react-app/src/components/RespondModal/respond.css
+++ b/react-app/src/components/RespondModal/respond.css
@@ -3,7 +3,7 @@
     align-items: flex-start;
     background-color: white;
     border-radius: 8px;
-    padding: .7rem;
+    padding: 1.5rem;
     margin-right: .5rem;
     margin-top: 1rem;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 4px 8px rgb(0 0 0 / 10%);
