no post on wall message renders conditionally

--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -728,3 +728,7 @@
     background-color: white;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
+
+.no-post-message {
+    text-align: center;
+}
