--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -481,6 +481,18 @@
     position: relative;
 }
 
+.photoboxBtn {
+    /* padding-left: 1rem; */
+    padding-left: .6rem;
+    padding-right: .6rem;
+    padding-top: .7rem;
+    padding-bottom: .7rem;
+    margin-left: .9rem;
+    border-radius: 12px;
+    position: relative;
+}
+
+.photoboxBtn:hover,
 .boxBtn:hover {
     background-color: rgb(238, 238, 238);
 }
