--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -136,8 +136,10 @@
     color: #1877f2;
     font-size: .9rem;
     font-weight: 600;
-    padding-left: .4rem;
-    padding-right: .4rem;
+    padding: .4rem;
+    margin-top: -.4rem;
+    /* margin-bottom: -.4rem; */
+
 }
 
 .edit-profileBtn3:hover {
@@ -200,28 +202,28 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-top: -.4rem;
+    margin-top: -1.5rem;
+    margin-bottom: .3rem;
+    margin-left: .5vw;
 }
 
 .indiv-portrait {
     display: flex;
     flex-direction: column;
-    /* margin-top: 1rem; */
-    margin-left: .4rem;
+    /* margin-left: .7rem; */
+    padding-left: .5rem;
 }
 
 .friends-portrait {
-    width: 9rem;
-    height: 9rem;
-    /* margin-left: 1px;
-    margin-right: .4rem; */
+    width: 7vw;
+    height: 7vw;
     box-sizing: border-box;
     border-radius: 12px;
     object-fit: cover;
 }
 
 .portrait-name {
-    font-size: .8rem;
+    font-size: .65vw;
     margin-left: .3rem;
     font-weight: bold;
     text-decoration: none;
