--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -197,6 +197,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 1.3rem!important;
+    box-sizing: border-box!important;
 }
 
 .nine-friends {
