splash page font color changed and new friends always show post display

--- a/react-app/src/components/SplashPage/splash.css
+++ b/react-app/src/components/SplashPage/splash.css
@@ -22,7 +22,7 @@
 
 .splash-text {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    color: blue;
+    color: #1877f2;
     font-size: 7vh;
     font-weight: bolder;
 }
