emoji size updated

--- a/react-app/src/components/Emojis/emoji.css
+++ b/react-app/src/components/Emojis/emoji.css
@@ -1,3 +1,8 @@
+.emoji-img {
+    width: 20px!important;
+    height: 20px!important;
+}
+
 .emoji-container1 {
     position: absolute;
     z-index: 3;
