--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -200,8 +200,9 @@
     background-color: white;
     border-radius: 8px;
     padding: .7rem;
-    padding-right: 3rem;
+    /* padding-right: 3rem; */
     margin-right: .5rem;
+    max-width: 380px;
     margin-top: 1rem;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 4px 8px rgb(0 0 0 / 10%);
     color:#c2c1c1
