--- a/react-app/src/components/SplashPage/splash.css
+++ b/react-app/src/components/SplashPage/splash.css
@@ -59,6 +59,11 @@
     width: 15%
 }
 
+.splash-logo {
+    font-size: 1.1rem;
+    color: rgb(153, 153, 153);
+}
+
 .footer-last-line {
     display: flex;
     justify-content: space-between;
