edit profile modal css updated

--- a/react-app/src/components/EditProfilePhoto/editprofilephoto.css
+++ b/react-app/src/components/EditProfilePhoto/editprofilephoto.css
@@ -4,8 +4,8 @@
     border-radius: 12px;
     padding: 1rem;
     background-color: white;
-    min-width: 350px;
-    width: 20vw;
+    min-width: 300px;
+    width: 20rem;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
 }
 
