css post picture

--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -324,3 +324,9 @@
 .blue {
     color: #1877F2!important;
 }
+
+.post-picture {
+    width: 100%;
+    max-height: 500px;
+    object-fit:contain;
+}
