--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -327,6 +327,14 @@
 
 .post-picture {
     width: 100%;
-    max-height: 500px;
+    max-height: 300px;
     object-fit:contain;
+    margin-left: .5rem;
+    margin-top: 1rem;
+    box-sizing: border-box;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    /* background-color: rgb(238, 238, 238);
+    border: solid rgb(238, 238, 238); */
+    border-radius: 5px;
 }
