--- a/react-app/src/components/Feed/feed.css
+++ b/react-app/src/components/Feed/feed.css
@@ -339,6 +339,19 @@
     border-radius: 5px;
 }
 
+.post1-picture {
+    width: 100%;
+    /* max-height: 300px; */
+    object-fit:contain;
+    margin-top: 1rem;
+    box-sizing: border-box;
+    /* padding-top: .5rem;
+    padding-bottom: .5rem;
+    background-color: rgb(238, 238, 238);
+    border: solid rgb(238, 238, 238); */
+    border-radius: 5px;
+}
+
 .cancel-picture {
     position: absolute;
     top: 5rem;
