--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     margin-left: .5rem;
+    min-width: 577px;
 }
 
 .intro-container {
@@ -31,6 +32,21 @@
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
     margin-top: 1rem;
     margin-right: .5rem;
+    min-width: 420px;
+    /* width: 100%;
+    box-sizing: border-box; */
+    background-color: white;
+}
+
+.container1s {
+    padding: 1rem;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
+    margin-top: 1rem;
+    margin-right: .5rem;
+    min-width: 400px;
+    width: 100%;
+    /* box-sizing: border-box; */
     background-color: white;
 }
 
@@ -122,7 +138,7 @@
 }
 
 .profile-nav-links {
-    font-size: 1rem;
+    font-size: 100%;
     font-weight: 600;
     margin-left: 0px;
     margin-right: 10px;
@@ -160,11 +176,13 @@
 }
 
 .posted-photos {
-    width: 7.3vw;
-    height: 7.3vw;
+    height: 8rem;
+    width: 8rem;
     margin: 2px;
     box-sizing: border-box;
     object-fit: cover;
+
+    position: relative;
 }
 
 .photos-container {
