--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -234,28 +234,37 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-top: -1.5rem;
-    margin-bottom: .3rem;
-    margin-left: .5vw;
+
+    justify-content: center;
+    margin-top: -.9rem;
+    /* margin-bottom: .3rem; */
 }
+
+/* .nine-images {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    margin-top: -.5rem;
+} */
 
 .indiv-portrait {
     display: flex;
     flex-direction: column;
     /* margin-left: .7rem; */
-    padding-left: .5rem;
+    /* padding-left: .5rem; */
 }
 
 .friends-portrait {
-    width: 7vw;
-    height: 7vw;
+    width: 8rem;
+    height: 8rem;
     box-sizing: border-box;
     border-radius: 12px;
     object-fit: cover;
 }
 
 .portrait-name {
-    font-size: .65vw;
+    font-size: 75%;
     margin-left: .3rem;
     font-weight: bold;
     text-decoration: none;
@@ -264,17 +273,21 @@
 
 .friend-link {
     text-decoration: none;
-    margin-left: .2rem;
-    margin-right: .2rem;
-    margin-top: 1rem;
+    margin: 2px;
+    box-sizing: border-box;
+    width: 30%;
     /* box-sizing: border-box; */
 }
 
-/* .friends-container,
-.photos-container {
-    min-width: 466px;
-} */
+/* .posted-photos {
+    height: 8rem;
+    width: 8rem;
+    margin: 2px;
+    box-sizing: border-box;
+    object-fit: cover;
 
+    position: relative;
+} */
 
 
 .post-box {
