--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -223,7 +223,7 @@
 }
 
 /*friends*/
-.friends-container {
+.friends1-container {
     display: flex;
     flex-direction: column;
     margin-bottom: 1.3rem!important;
